<resources>
    <string name="app_name">My Application</string>

    <!-- Sign up-->
    <string name="signup_title">Sign up</string>
    <string name="signup_email_title">Email</string>
    <string name="signup_email_hint">whatever@mail.com</string>
    <string name="signup_password_title">Password</string>
    <string name="signup_password_hint">6+ character</string>
    <string name="signup_name_title">Name</string>
    <string name="signup_name_hint">Input name</string>

    <!-- Login -->
    <string name="login_email_title">Email</string>
    <string name="login_email_hint">whatever@mail.com</string>
    <string name="login_password_title">Password</string>
    <string name="login_password_hint">6+ character</string>

    <!-- Main -->
    <string name="main_new_title">New gym community</string>
    <string name="main_recom_title">Recommended gym community</string>

    <!-- Like -->
    <string name="like_title">Like</string>
    <string name="like_empty">Empty List</string>

    <!-- Profile -->
    <string name="profile_title">Profile</string>
    <string name="profile_personal_title">PERSONAL</string>
    <string name="profile_personal_info">Personal info</string>
    <string name="profile_logout">Logout</string>

    <!-- Create -->
    <string name="create_title">Create new community</string>
    <string name="create_community_button">Create</string>
    <string name="create_community_title">Title</string>
    <string name="create_community_type">Type of Sports</string>
    <string name="create_community_location">Location</string>
    <string name="create_community_desc">Description</string>
    <string name="create_community_start">Start date</string>
    <string name="create_community_end">End date</string>

    <string name="create_community_title_hint">Input Title</string>
    <string name="create_community_type_hint">Select Type</string>
    <string name="create_community_location_hint">Input Location</string>
    <string name="create_community_desc_hint">Input Description</string>
    <string name="create_community_start_hint">Input start date</string>
    <string name="create_community_end_hint">Input end date</string>


    <!-- Detail -->
    <string name="detail_">Create new community</string>
    <string name="detail_review_format">%s(%d)</string>

    <!-- Common -->
    <string name="common_invite">Invite</string>
    <string name="common_accept">Accept</string>
    <string name="common_deny">Deny</string>

    <!-- Invite -->
    <string name="invite_dialog_message">Are you sure to invite this person?</string>

    <!-- Manage Request -->
    <string name="managerequest_dialog_message_accept">Are you sure to accept?</string>
    <string name="managerequest_dialog_message_deny">Are you sure to deny?</string>
    <string name="managerequest_result_message_accept">Accepted</string>
    <string name="managerequest_result_message_deny">Denied</string>


    <!-- Notification -->
    <string name="notification_content_format">You got an invitation from %s.\nWould you like to accept the invitation?</string>

    <!-- Search -->
    <string name="search_title">Search</string>

    <!-- My Community -->
    <string name="mycommunity_title">My Community</string>

</resources>