<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="viewModel"
            type="com.github.scott.gcm.data.viewmodel.CreateViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:src="@drawable/temp_create">

        <ImageButton
            android:id="@+id/button_create_back"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="20dp"
            android:background="@android:color/transparent"
            android:onClick="@{()->viewModel.onClickBack()}"
            android:scaleType="fitCenter"
            android:src="@drawable/back_icon"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textview_create_title"
            style="@style/TitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/create_title"
            app:layout_constraintBottom_toBottomOf="@+id/button_create_back"
            app:layout_constraintLeft_toRightOf="@+id/button_create_back"
            app:layout_constraintTop_toTopOf="@+id/button_create_back" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_create_back">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:paddingTop="20dp"
                android:paddingBottom="80dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textview_create_title">

                <FrameLayout
                    android:id="@+id/framelayout_create_photo"
                    android:layout_width="match_parent"
                    android:layout_height="220dp"
                    android:background="@drawable/button_grey"
                    android:onClick="@{()->viewModel.onClickPhoto()}"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/imageview_create_photohint"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center"
                        android:scaleType="fitCenter"
                        android:src="@drawable/photo_icon" />

                    <ImageView
                        android:id="@+id/imageview_create_photo"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:scaleType="fitXY" />
                </FrameLayout>


                <TextView
                    android:id="@+id/textview_create_communitytitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/create_community_title"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/framelayout_create_photo" />

                <EditText
                    android:id="@+id/edittext_create_communitytitle"
                    style="@style/EditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:hint="@string/create_community_title_hint"
                    android:text="@={viewModel.title}"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textview_create_communitytitle" />

                <TextView
                    android:id="@+id/textview_create_communitytypetitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/create_community_type"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/edittext_create_communitytitle" />


                <FrameLayout
                    android:id="@+id/framelayout_create_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/button_grey"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textview_create_communitytypetitle">

                    <Spinner
                        android:id="@+id/spinner_create_communitytype"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:dropDownVerticalOffset="52dp" />

                    <TextView
                        android:id="@+id/textview_create_communitytype"
                        style="@style/ContentStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_margin="1dp"
                        android:background="@color/white"
                        android:gravity="start|center_vertical"
                        android:minWidth="250dp"
                        android:paddingStart="12dp"
                        android:text="@string/create_community_type_hint" />

                </FrameLayout>

                <TextView
                    android:id="@+id/textview_create_communitylocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/create_community_location"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/framelayout_create_type" />

                <TextView
                    android:id="@+id/textview_create_communitylocationcontent"
                    style="@style/ContentStyle"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/button_grey"
                    android:gravity="start|center_vertical"
                    android:hint="@string/create_community_location_hint"
                    android:onClick="@{()->viewModel.onClickLocation()}"
                    android:paddingStart="12dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textview_create_communitylocation" />

                <TextView
                    android:id="@+id/textview_create_communitydesc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/create_community_desc"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textview_create_communitylocationcontent" />

                <EditText
                    android:id="@+id/edittext_create_communitydesc"
                    style="@style/EditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:hint="@string/create_community_desc_hint"
                    android:text="@={viewModel.desc}"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textview_create_communitydesc" />

                <LinearLayout
                    android:id="@+id/linearlayout_create_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/edittext_create_communitydesc">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Start" />

                        <TextView
                            android:id="@+id/textview_create_start"
                            style="@style/ContentStyle"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_marginTop="10dp"
                            android:background="@drawable/button_grey"
                            android:gravity="center"
                            android:onClick="@{()->viewModel.onClickDate(true)}"
                            android:text="-" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="End" />

                        <TextView
                            android:id="@+id/textview_create_end"
                            style="@style/ContentStyle"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_marginTop="10dp"
                            android:background="@drawable/button_grey"
                            android:gravity="center"
                            android:onClick="@{()->viewModel.onClickDate(false)}"
                            android:text="-" />
                    </LinearLayout>

                </LinearLayout>

                <Button
                    android:id="@+id/button_create_submit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/button_blue"
                    android:onClick="@{()->viewModel.onClickCreate()}"
                    android:text="@string/create_community_button"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearlayout_create_date"
                    app:layout_constraintVertical_bias="1" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>    
