<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.github.scott.gcm.data.viewmodel.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <TextView
            android:id="@+id/textview_login_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="Log in"
            android:textColor="@color/black"
            android:textSize="@dimen/textsize_18"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="80dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textview_login_title"
            app:layout_constraintVertical_bias="0">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_email_title" />

            <EditText
                android:id="@+id/edittext_login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/selector_edittext"
                android:padding="12dp"
                android:ems="10"
                android:hint="@string/login_email_hint"
                android:inputType="textPersonName"
                android:text="@={viewModel.email}" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/login_password_title" />

            <EditText
                android:id="@+id/edittext_login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/selector_edittext"
                android:ems="10"
                android:hint="@string/login_password_hint"
                android:inputType="textPassword"
                android:padding="12dp"
                android:text="@={viewModel.password}" />

            <Button
                android:id="@+id/button_login_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_blue"
                android:onClick="@{()->viewModel.onClickLogin()}"
                android:text="Login"
                android:textColor="@color/white" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:scaleType="fitCenter"
                android:src="@drawable/googlesignin"
                android:visibility="gone" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <com.google.android.gms.common.SignInButton
                    android:id="@+id/button_login_google"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <View
                    android:id="@+id/view_login_google"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:onClick="@{()->viewModel.onClickSocialLogin()}" />
            </FrameLayout>

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="Or"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/button_login_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_grey"
                android:onClick="@{()->viewModel.onClickJoin()}"
                android:text="Sign up" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>